--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,1 +1,6 @@
-compatibility_date = "2024-09-10"
+compatibility_date = "2024-08-21"
+
+[[d1_databases]]
+binding = "D1"
+database_name = "thesis"
+database_id = "bf777954-b663-41d7-90ab-304706d4b81b"
